<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="8dp"
    android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:orientation="vertical">
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/NetworkImageView"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="@dimen/_250dp"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:maxLines="2"
                android:text="@string/movie_name"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_marginHorizontal="8dp"
                android:maxLines="2"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_marginHorizontal="8dp"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"
                android:layout_marginHorizontal="8dp"
                android:text="@string/author"/>


        </LinearLayout>


</androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ImgBookMark"
        android:src="@drawable/bookmark_selector"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_60dp"
        android:translationZ="@dimen/_4dp"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_4dp"
        style="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:maxLines="2"
        android:paddingVertical="@dimen/_4dp"
        android:paddingHorizontal="@dimen/_8dp"
        android:translationZ="@dimen/_4dp"
        android:textColor="#95000000"
        android:background="@drawable/shape_time_background"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        android:layout_marginTop="@dimen/_200dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/time_12_12_12"
        app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
</androidx.constraintlayout.widget.ConstraintLayout>